--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ font-size:3.5vw
 
 .buttons{
   font-size: 3vw;
-  color:black;
-  background:white;
+  color:white;
+  background:black;
   width:18vw;
   height:18vw;
   outline:none;
