--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ text-align:center;
 }
 
 h1{
-  font-size:20px;
+  font-size: 4vw;
   color:lemonchiffon;
   text-shadow:1.5px 1.5px 0 royalblue, -1.5px -1.5px 0 royalblue,
               -1.5px 1.5px 0 royalblue, 1.5px -1.5px 0 royalblue,
@@ -20,40 +20,21 @@ h1{
 }
 
 h2{
-  font-size:20px;
-  margin:1;
-  font-weight:normal;
-}
-
-h3{
-  margin:20px 0px 0px 0px;
-}
-
-#link{
-  background:azure;
-  border: solid 2px cornflowerblue;
-  outline:none;
-  font-size:13px;
-  width:70px;
-  height:30px;
-  border-radius:10px
-}
-
-a{
-  text-decoration: none;
-  color:black;
+margin:1;
+font-weight:normal;
+font-size:3.5vw
 }
 
 .buttons{
   font-size: 3vw;
+  width:18vw;
+  height:18vw;
+  border-radius:10px;
   color:black;
   background:white;
   outline:none;
   border: solid 1px cornflowerblue;
-  font-size:15px;
-  width:90px;
-  height:90px;
-  border-radius:10px
+  border-radius:2vw;
 }
 
 table {
@@ -70,14 +51,25 @@ margin:0;
 padding:0;
 }
 
+#link{
+  font-size: 3vw;
+  color:black;
+  background:azure;
+  border: solid 2px cornflowerblue;
+  outline:none;
+  width:36vw;
+  height:9vw;
+  border-radius:2vw;
+}
+
 #create{
+  font-size: 3vw;
   color:black;
   background:lemonchiffon;
   border: solid 2px cornflowerblue;
   outline:none;
-  font-size:15px;
-  width:180px;
-  height:45px;
+  width:36vw;
+  height:9vw;
 }
 
 #create:active{
@@ -94,13 +86,13 @@ padding:0;
 }
 
 .saveareabuttons{
+  font-size: 3vw;
   color:black;
   background:lemonchiffon;
   border: solid 1px cornflowerblue;
   outline:none;
-  font-size:15px;
-  width:90px;
-  height:90px;
+  width:18vw;
+  height:18vw;
 }
 
 .saveareabuttons:active{
@@ -122,41 +114,117 @@ padding:0;
   font-size:16px;
   background:lightyellow;
   resize: none;
+  padding:0.8vw;
   border: solid 1px cornflowerblue;
   outline:none;
   font-family:メイリオ;
-  padding:4px;
-  width:170px;
-  height:80px;
+  width:34vw;
+  height:16vw;
 }
 
-#updatebutton,#QandAbutton{
-  font-size:12.5px;
-  width:180px;
-  height:45px;
+#updatebutton{
+  font-size:2.5vw;
   color:#654f35;
   background:lemonchiffon;
   border: solid 1px cornflowerblue;/*線色*/
   outline:none;
+  width:36vw;
+  height:9vw;
+}
+
+#QandAbutton{
+  font-size:2.5vw;
+  color:#654f35;
+  background:lemonchiffon;
+  border: solid 1px cornflowerblue;/*線色*/
+  outline:none;
+  width:36vw;
+  height:9vw;
 }
 
 #closebutton{
+  font-size:2.5vw;
   color:#654f35;
   background:lemonchiffon;
   border: solid 1px cornflowerblue;/*線色*/
   outline:none;
-  font-size:12.5px;
-  width:90px;
-  height:45px;
+  width:18vw;
+  height:9vw;
 }
 
 #QandA,#update{
-  padding: 4px;
-  width:446px;
-  height:186px;
   resize: none;
   font-family: メイリオ;
   font-size: 16px;
+  padding: 0.8vw; /*余白*/
+  width:88vw;
+  height:36vw;
   margin:auto;
+}
+
+#update{
   display:none;/*blockで上書き*/
+}
+
+#QandA{
+  display:none;/*blockで上書き*/
+}
+
+@media(min-width:500px){ /*最大サイズの指定(PC対応)*/
+
+  h1,h2{
+    font-size:20px;
+  }
+
+  .buttons{
+    font-size:15px;
+    width:90px;
+    height:90px;
+    border-radius:10px;
+  }
+
+  #link{
+    font-size:12px;
+    width:70px;
+    height:30px;
+    border-radius:10px;
+  }
+
+  #create{
+    font-size:15px;
+    width:180px;
+    height:45px;
+  }
+
+  .saveareabuttons{
+    font-size:15px;
+    width:90px;
+    height:90px;
+  }
+
+  #save_weapondata{
+    padding:4px;
+    width:170px;
+    height:80px;
+  }
+
+  #updatebutton,#QandAbutton{
+    font-size:12.5px;
+    width:180px;
+    height:45px;
+  }
+
+  #closebutton{
+    font-size:12.5px;
+    width:90px;
+    height:45px;
+  }
+
+  #update,#QandA{
+    padding: 4px;
+    width:446px;
+    height:186px;
+  }
+
+
 }
