--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ text-align:center;
 }
 
 h1{
+  font-family:"メイリオ";
   font-size: 4vw;
   color:lemonchiffon;
   text-shadow:1.5px 1.5px 0 royalblue, -1.5px -1.5px 0 royalblue,
