--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ text-align:center;
 }
 
 h1{
-  font-family:"メイリオ";
+  font-family:"sans-serif";
   font-size: 4vw;
   color:lemonchiffon;
   text-shadow:1.5px 1.5px 0 royalblue, -1.5px -1.5px 0 royalblue,
