--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@ max-width:100%;
 text-align:center;
 }
 
-h1{}
+h1{
+  margin:2vw;
+}
 
 img{
   width:60VW;
@@ -168,6 +170,10 @@ padding:0;
 }
 
 @media(min-width:500px){ /*最大サイズの指定(PC対応)*/
+
+  h1{
+    margin:10px;
+  }
 
   h2{
     font-size:20px;
